# infotecs_junior_position_assigment

./: README.md
task1/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
task1/include/: driver_facade.hpp
task1/src/: driver_facade.cpp  main.cpp
task2/: .clang-format  CMakeLists.txt  Doxyfile  Makefile  README.md
task2/include/: mymem.h
task2/src/: main.c  mymem.c
task2/tests/: test_mymem.cpp
